update Category + CategoryGroup
Xử lý các ngoại lệ, bổ sung thêm CG cho user thường